Fixed (not quite) Dashboard navbar # Changed styles.scss classes and added "-custom" to styles that are in conflict with bootstrap # Changed font to Atkinson Hyperlegible # Changed navbar.php class names

--- a/Styles/custom-style.css
+++ b/Styles/custom-style.css
@@ -73,6 +73,7 @@
     margin: 0;
     width: 130px;
     height: 2.2rem;
+    font-family: "Atkinson Hyperlegible", sans-serif;
     font-size: 1rem;
     color: white;
     margin-bottom: 6px;
